# amorepacific-prototype-agent

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml  todos.md
.github/: copilot-instructions.md
data/: cosmetic_raw_materials.json
design/: 01-orchestrator-design.md  02-supervisor-agent-design.md  03-worker-agent-design.md  README.md
examples/: demo_ingredient_worker.py
index/: README.md  setup_cosmetic_index.py
src/: __init__.py
src/orchestrator/: __init__.py  context_manager.py  models.py  orchestrator.py  session_manager.py
src/supervisor/: __init__.py  aggregator.py  models.py  prompts.py  router.py  supervisor.py  worker_tools.py
src/ui/: README.md  __init__.py  app.py
src/utils/: __init__.py  config.py  errors.py  logger.py
src/workers/: __init__.py  base.py  ingredient.py
src/workers/tools/: __init__.py  models.py  search_client.py  search_tools.py
tests/: test_aggregator.py  test_base_worker.py  test_supervisor.py
tests/e2e/: __init__.py  test_system_e2e.py
tests/integration/: __init__.py  test_supervisor_with_llm.py  test_worker_with_llm.py
tests/mocks/: __init__.py
tests/orchestrator/: __init__.py  test_context_manager.py  test_orchestrator.py  test_session_manager.py
tests/supervisor/: __init__.py  test_router.py
tests/workers/: __init__.py  test_ingredient.py
tests/workers/tools/: __init__.py  test_search_tools.py
